meta: pokerus_macro crate with support for metang-based enums

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "pokerus"
 [dependencies]
 byteorder = "1"
 chrono = "0.4"
+pokerus_macro = { path = "./pokerus_macro" }
 
 [features]
 default = [ "write" ]
